--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -250,14 +250,14 @@
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="strCustomUrl">Custom Domain Name here</string>
-    <string name="strMyTeam">My Team</string>
-    <string name="strMyProfile">My Profile</string>
-    <string name="strMyTask">My Task</string>
+    <string name="strMyTeam">Team</string>
+    <string name="strMyProfile">Profile</string>
+    <string name="strMyTask">Task</string>
     <string name="strLeaveOD"><![CDATA[Leave & OD & Comp Off]]></string>
-    <string name="strMyAttendance">My Attendance</string>
+    <string name="strMyAttendance"> Attendance</string>
     <string name="strDocumentDirectory">Document Directory</string>
-    <string name="strMySalary">My Salary</string>
-    <string name="strMyClaims">My Claims</string>
+    <string name="strMySalary">Salary</string>
+    <string name="strMyClaims">Claims</string>
     <string name="strCopyRight">\@2020 wfms.htistelecom.in. All rights reserved</string>
     <string name="errCustomUrl">Enter custom domain name</string>
     <string name="strChat">Chat</string>
